--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon index.js",
-    "dev:worker": "nodemon worker.js"
+    "dev:worker": "nodemon worker.js",
+    "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
