--- a/server/package.json
+++ b/server/package.json
@@ -4,10 +4,11 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon index.js",
-    "dev:worker": "nodemon worker.js",
-    "start": "nodemon index.js"
-  },
+  "dev": "nodemon index.js",
+  "dev:worker": "nodemon worker.js",
+  "start": "node index.js",
+  "worker": "node worker.js"
+},
   "author": "",
   "license": "ISC",
   "description": "",
