--- a/server/package.json
+++ b/server/package.json
@@ -20,13 +20,16 @@
     "@langchain/qdrant": "^0.1.2",
     "@qdrant/js-client-rest": "^1.16.2",
     "@xenova/transformers": "^2.17.2",
+    "axios": "^1.13.2",
     "bullmq": "^5.52.2",
+    "cloudinary": "^2.8.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^5.1.0",
     "groq-sdk": "^0.37.0",
     "langchain": "^0.3.24",
     "multer": "^1.4.5-lts.2",
+    "node-fetch": "^3.3.2",
     "openai": "^4.62.1",
     "pdf-parse": "^1.1.1"
   },
